--- a/monitor.html
+++ b/monitor.html
@@ -76,16 +76,23 @@
                         return 0
                     })
                 },
-                rssBurst1: {
+                maxRssScore: {
                     value: 0,
                     color: 'red',
                     data: d3.range(limit).map(function() {
                         return 0
                     })
                 },
+                rssBurst1: {
+                    value: 0,
+                    color: 'gray',
+                    data: d3.range(limit).map(function() {
+                        return 0
+                    })
+                },
                 rssBurst2: {
                     value: 0,
-                    color: 'orange',
+                    color: 'gray',
                     data: d3.range(limit).map(function() {
                         return 0
                     })
@@ -178,7 +185,8 @@
                     pageQueueSize: Math.sqrt(data.pageQueueSize),
                     pageQueueSizeWithoutPending: Math.sqrt(data.pageQueueSizeWithoutPending),
                     rssBurst1: 0,
-                    rssBurst2: 0
+                    rssBurst2: 0,
+                    maxRssScore: Math.sqrt(data.maxRssScore)
                 }
                 if (data.rssBursts[0] && data.rssBursts[0][2] * 1000 > Date.now() - 60000)
                     graphData.rssBurst1 = Math.sqrt(data.rssBursts[0][1]);
@@ -186,7 +194,7 @@
                     graphData.rssBurst2 = Math.sqrt(data.rssBursts[1][1]);
 
                 console.log(graphData);
-                $("#summary").text("Page queue: " + data.pageQueueSize + " total / " + data.pageQueueSizeWithoutPending + " available");
+                $("#summary").html("Page queue: " + data.pageQueueSize + " total / " + data.pageQueueSizeWithoutPending + " available<br>RSS staleness score: " + data.maxRssScore);
 
                 var text = "";
                 for (var i in data.clients) {
